--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Inicio de sesión</title>
-	<link href="css/main.css" rel="stylesheet" />
+	<link rel="stylesheet" href="/css/main.css" />
 </head>
 
 <body>
