--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Inicio de sesión</title>
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="CSS/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
